Header text spacing fix Readded home button

--- a/css/main.scss
+++ b/css/main.scss
@@ -40,16 +40,13 @@ header {
   box-sizing: border-box;
   background-color: #373948;
   position: fixed;
-  top: 0px;
-  left: 0px;
-  padding: 0px 0px 0px 30px;
 }
 
 header h1 {
   float: left;
-  margin: 5px 0px;
   color: white;
   font-family: 'Peaches';
+  margin: 18px auto 12px 20px;
 }
 
 header nav ul {
